--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -10,8 +10,10 @@ spring.data.redis.repositories.enabled = false
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://hrabit64.xyz/JGW_TEST
+spring.datasource.username=root
+spring.datasource.password=wsKU4qwqRKzeMwQK
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.properties.hibernate.format_sql = true
