[FEAT] register email 게이트웨이로부터 받아오게 수정

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ out/
 
 application-dev.properties
 application-product.properties
+application-test.properties
 logback-product.xml
 logback-dev.xml
 *.sql
