--- a/build.gradle
+++ b/build.gradle
@@ -46,8 +46,16 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-logging'
 
     implementation 'org.springframework.boot:spring-boot-starter-aop'
+
+    // https://mvnrepository.com/artifact/com.h2database/h2
+    testRuntimeOnly 'com.h2database:h2:2.1.214'
+
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
+    implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.1'
+
 }
 
 tasks.named('test') {
+    systemProperty 'spring.profiles.active', 'test'
     useJUnitPlatform()
 }
