--- a/build.gradle
+++ b/build.gradle
@@ -50,8 +50,13 @@ dependencies {
     // https://mvnrepository.com/artifact/com.h2database/h2
     testRuntimeOnly 'com.h2database:h2:2.1.214'
 
-    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
-    implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.1'
+
+    // QueryDSL
+//    implementation 'com.querydsl:querydsl-core'
+//    implementation 'com.querydsl:querydsl-jpa'
+//    annotationProcessor("com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa")
+//    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+//    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
 
 }
 
