[FEAT] Q class 추가

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.1'
     id 'io.spring.dependency-management' version '1.1.0'
+//    id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
 }
 
 group = 'com.jaramgroupware'
@@ -15,6 +16,7 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+//    querydsl.extendsFrom compileClasspath
 }
 
 repositories {
@@ -52,11 +54,9 @@ dependencies {
 
 
     // QueryDSL
-//    implementation 'com.querydsl:querydsl-core'
-//    implementation 'com.querydsl:querydsl-jpa'
-//    annotationProcessor("com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa")
-//    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
-//    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+
 
 }
 
@@ -64,3 +64,17 @@ tasks.named('test') {
     systemProperty 'spring.profiles.active', 'test'
     useJUnitPlatform()
 }
+
+//def querydslDir = "$buildDir/generated/querydsl"
+//
+//querydsl {
+//    jpa = true
+//    querydslSourcesDir = querydslDir}
+//
+//sourceSets {
+//    main.java.srcDir querydslDir
+//}
+//
+//compileQuerydsl {
+//    options.annotationProcessorPath = configurations.querydsl
+//}
