--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.1'
     id 'io.spring.dependency-management' version '1.1.0'
-//    id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
 }
 
 group = 'com.jaramgroupware'
@@ -16,7 +15,6 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
-//    querydsl.extendsFrom compileClasspath
 }
 
 repositories {
@@ -54,9 +52,10 @@ dependencies {
 
 
     // QueryDSL
-    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
-
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
 }
 
@@ -64,17 +63,3 @@ tasks.named('test') {
     systemProperty 'spring.profiles.active', 'test'
     useJUnitPlatform()
 }
-
-//def querydslDir = "$buildDir/generated/querydsl"
-//
-//querydsl {
-//    jpa = true
-//    querydslSourcesDir = querydslDir}
-//
-//sourceSets {
-//    main.java.srcDir querydslDir
-//}
-//
-//compileQuerydsl {
-//    options.annotationProcessorPath = configurations.querydsl
-//}
