--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,9 @@ dependencies {
     // https://mvnrepository.com/artifact/com.google.firebase/firebase-admin
     implementation 'com.google.firebase:firebase-admin:9.2.0'
 
-    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    // https://mvnrepository.com/artifact/org.zeromq/jeromq
+    implementation 'org.zeromq:jeromq:0.5.3'
+
 }
 
 tasks.named('test') {
